add footer + estilização

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     --gray-colors-300: #393c40;
     --gray-colors-400: #5c6066;
     --gray-colors-800: #f7f8fa;
-    --white-colors-text: rgba(255, 255, 255, 0.702);
+    --white-colors-text: rgba(255, 255, 255, 0.699);
     --white: #fff;
 }
 
@@ -217,5 +217,88 @@ header .menu-mobile {
     /* padding: 2rem 4rem; */
 }
 
+
+/* FOOTER */
+footer {
+    background-color: var(--gray-colors-100);
+    padding: 8.8rem 0 4rem;
+}
+footer h4 {
+    color: var(--white);
+    font-family: 'Sora', sans-serif;
+    font-weight: 600;
+    line-height: 125%;
+    letter-spacing: -1px;
+
+    margin-bottom: 2.4rem;
+}
+footer p, footer span, footer a, footer strong {
+    color: var(--white-colors-text);
+    font-size: 1.4rem;
+    line-height: 105%;
+}
+footer a, footer a span {
+    font-family: 'Sora', sans-serif;
+}
+
+
+footer .main-footer {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: flex-start; */
+
+    padding-bottom: 7.2rem;
+    border-bottom: 1px solid #ffffff38;
+}
+
+footer .main-footer .area-left {
+    width: 100%;
+    max-width: 28.1rem;
+}
+footer .main-footer .area-left img {
+    margin-bottom: 3.5rem;
+}
+footer .main-footer .area-left p {
+    line-height: 150%;
+}
+
+footer .main-footer nav {
+    width: 100%;
+    max-width: 77.7rem;
+
+    display: flex;
+    justify-content: space-between;
+    /* align-items: flex-start; */
+}
+
+/* footer .main-footer nav .item-nav ul {
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
+} 
+OU */
+footer .main-footer nav .item-nav li:not(:last-child) {
+    margin-bottom: 3.2rem;
+}
+
+footer .main-footer nav .item-nav:last-child ul li a {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+footer .copy {
+    padding-top: 4rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .copy .group a {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
 
 /* LAYOUT */
